--- a/css/style.css
+++ b/css/style.css
@@ -1893,6 +1893,10 @@ height: 16px;
     }
 
     /* Контент по умолчанию скрыт */
-  
+    #main {
+      display: none;
+     
+      
+    }
 
   
